--- a/html/catalog.html
+++ b/html/catalog.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Каталог уроков - English Explorer</title>
-  <link rel="stylesheet" href="/css/catalog.css">
+  <link rel="stylesheet" href="css/catalog.css">
 </head>
 <body>
   <a href="/index.html" class="back-button">Назад</a>
