--- a/html/registration.html
+++ b/html/registration.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <a href="/index.html" class="back-button">Назад</a>
+  <a href="index.html" class="back-button">Назад</a>
   <div class="images-wrapper">
     <div class="column">
       <img src="img/Кошка.png" alt="Кошка" class="side-img">
