--- a/html/registration.html
+++ b/html/registration.html
@@ -4,21 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Авторизация и регистрация</title>
-  <link rel="stylesheet" href="css/registraion.css">
+  <link rel="stylesheet" href="../css/registraion.css">
 </head>
 <body>
 
-  <a href="index.html" class="back-button">Назад</a>
+  <a href="/index.html" class="back-button">Назад</a>
   <div class="images-wrapper">
     <div class="column">
-      <img src="img/Кошка.png" alt="Кошка" class="side-img">
-      <img src="img/Кошка2.png" alt="Кошка2" class="side-img">
-      <img src="img/Кошка3.png" alt="Кошка3" class="side-img">
+      <img src="../img/Кошка.png" alt="Кошка" class="side-img">
+      <img src="../img/Кошка2.png" alt="Кошка2" class="side-img">
+      <img src="../img/Кошка3.png" alt="Кошка3" class="side-img">
     </div>
     <div class="column">
-      <img src="img/Кошка4.png" alt="Кошка4" class="side-img">
-      <img src="img/Собака.png" alt="Собака" class="side-img">
-      <img src="img/Собака2.png" alt="Собака2" class="side-img">
+      <img src="../img/Кошка4.png" alt="Кошка4" class="side-img">
+      <img src="../img/Собака.png" alt="Собака" class="side-img">
+      <img src="../img/Собака2.png" alt="Собака2" class="side-img">
     </div>
   </div>
   <div class="container">
